--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 		<div class="topbar">
 			<div class="top_center">
 				<img src="images/a15.png"/ class="left">
-				<p id="a">				
-					<marquee behavior="scroll" direction="left">
-						[温馨提示]最近有不少不法分子骗人，请大家注意!!!
-					</marquee>
-				</p>
+				<div id="scroll">
+					<span id="l">[温馨提示]最近有不少不法分子骗人，请大家注意!!!</span>
+				</div>
 			</div>
 		</div>
 		<div class="box" id="box">
